syntax = "proto3";
package auth;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

import "paperpilot_common/protobuf/user/user.proto";


// 登录请求
message LoginRequest {
    // 手机号
    string phone = 1;
    // 密码
    string password = 2;
}

// token
message Token {
    // token值
    string value = 1;
    // 过期时间
    google.protobuf.Timestamp expire_time = 2;
}

// 登录响应
message LoginResponse {
    // 用户信息
    user.UserInfo user = 1;
    // access token
    Token access = 2;
    // refresh token
    Token refresh = 3;
}

// 刷新token请求
message RefreshTokenRequest {
    // refresh token
    string refresh = 1;
}

// 刷新token响应
message RefreshTokenResponse {
    // access token
    Token access = 1;
}

// 发送短信验证码请求
message SendSmsCodeRequest {
    // 手机号
    string phone = 1;
}

// 获取手机号数量请求
message CountPhoneRequest {
    // 手机号
    string phone = 1;
}

// 获取数量响应
message CountResponse {
    // 数量
    int32 count = 1;
}

// 获取用户名数量请求
message CountUsernameRequest {
    // 用户名
    string username = 1;
}


// 认证公开接口（可匿名访问）
service AuthPublicService {
    // 登录
    rpc Login(LoginRequest) returns (LoginResponse);

    // 刷新token
    rpc Refresh(RefreshTokenRequest) returns (RefreshTokenResponse);

    // 登出
    rpc Logout(google.protobuf.Empty) returns (google.protobuf.Empty);

    // 注册
    rpc Register(user.CreateUserRequest) returns (LoginResponse);
    // 发送短信验证码
    rpc SendSmsCode(SendSmsCodeRequest) returns (google.protobuf.Empty);
    // 获取手机号数量
    rpc CountPhone(CountPhoneRequest) returns (CountResponse);
    // 获取用户名数量
    rpc CountUsername(CountUsernameRequest) returns (CountResponse);
}
